- fix center modal to visible area

--- a/src/main.css
+++ b/src/main.css
@@ -168,7 +168,7 @@ a:focus {
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.45);
-  position: absolute;
+  position: fixed;
   width: 400px;
   left: 50%;
   top: 0;
